fix: restore button gap, remove Link wrappers that broke flex spacing

--- a/frontend/src/components/ui/Button/Button.scss
+++ b/frontend/src/components/ui/Button/Button.scss
@@ -20,6 +20,11 @@
   font-family: $font;
   letter-spacing: .01em;
   @include foc;
+  margin-right: $sp2;
+
+  &:last-child {
+    margin-right: 0;
+  }
 
   &:disabled {
     opacity: .35;
